# phonometrics

./: .dockerignore  Dockerfile  Dockerfile.phoneme_api  LICENSE  README.md  Taskfile.yml  api.py  api_phonemes.py  api_words.py  config.yaml  gradio_app.py  gradio_app_2.py  gradio_app_audio_book.py  pyproject.toml  tox.ini
ci/: .taskenv  format.yml  linters.yml  tests.yml
phonometrics/: run.py
phonometrics/audio_processing/: pitch.py
phonometrics/evaluate/: diff.py
phonometrics/transcription/phoneme/: decoder.py  model.py  tokens.py
phonometrics/transcription/phonemes/: decoder.py  model.py
phonometrics/transcription/word/: model.py
phonometrics/transcription/words/: model.py  whisper_local.py  whisper_openai.py
phonometrics/vizualize/: plot.py
tests/: conftest.py  test_api.py  test_phoneme_transcription_api.py
tests/phonometrics/: test_run.py
tests/phonometrics/transcription/phoneme/: test_model.py
tests/phonometrics/transcription/phonemes/: test_model.py
tests/phonometrics/transcription/word/: test_words_model.py
tests/phonometrics/transcription/words/: test_whisper_local.py  test_whisper_openai.py
